# NakahodoRintaro.github.io

./: README.md  index.html
Radio/: index.html
contactform/: contactform.php
css/: style.css
js/: main.js
kadai2/: zikukan_1.html
kadai3/Webtest/: metadata_rgb.csv  pyproject.toml  style.css  tree.txt
kadai3/Webtest/cgi-bin/: metadata_ext.py  metadata_rep.py  upload.py
kadai_1/: README.md  custom-msdf.json  index.html
